Wrote routes to require OAuth and Updated Swagger.json with new schema and to need Oauth.
