# routes/quotes.js
@@ -1,12 +1,14 @@
 const quotes = require('express').Router();
 const quotesController = require('../controllers/con_quotes.js');
+const { ensureAuthenticated, ensureAdmin } = require('../models/utilities');
 
+// require login
+quotes.get('/', ensureAuthenticated, quotesController.listAll);
+quotes.get('/:book', ensureAuthenticated, quotesController.listByBook);
+quotes.get('/:id', ensureAuthenticated, quotesController.listByCharacter);
 
-quotes.get('/', quotesController.listAll);
-quotes.get('/:book', quotesController.listByBook);
-quotes.get('/:id', quotesController.listByCharacter);
-quotes.post('/createNewQuote', quotesController.createNewQuote);
-quotes.put('/updateQuote/:id', quotesController.updateQuote);
-
+//admin only
+quotes.post('/createNewQuote', ensureAdmin, quotesController.createNewQuote);
+quotes.put('/updateQuote/:id', ensureAdmin, quotesController.updateQuote);
 
 module.exports = quotes;
