# routes/users.js
@@ -1,13 +1,18 @@
 const users = require('express').Router();
 const usersController = require('../controllers/con_users.js');
+const { ensureAuthenticated, ensureAdmin } = require('../models/utilities');
 
-
-users.get('/', usersController.listAllUsers); 
+// Admin-only
+users.get('/', ensureAdmin, usersController.listAllUsers); 
+// Public
 users.post('/createNewUser', usersController.createNewUser);
-users.put('/updateUser/:id', usersController.updateUser);
-users.patch('/changePassword/:id', usersController.changePassword);
-users.patch('/setAccessLevel/:id', usersController.setAccessLevel);
-users.delete('/removeUser/:id', usersController.removeUser);
-
+// Auth required
+users.put('/updateUser/:id', ensureAuthenticated, usersController.updateUser);
+// Auth required
+users.patch('/changePassword/:id', ensureAuthenticated, usersController.changePassword);
+// Admin-only
+users.patch('/setAccessLevel/:id', ensureAdmin, usersController.setAccessLevel);
+// Admin-only
+users.delete('/removeUser/:id', ensureAdmin, usersController.removeUser);
 
 module.exports = users;
